WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
81082
[JSC] Web Inspector: CRASH running $0, $1, etc before they are set
https://bugs.webkit.org/show_bug.cgi?id=81082
Summary
[JSC] Web Inspector: CRASH running $0, $1, etc before they are set
Joseph Pecoraro
Reported
2012-03-13 23:35:43 PDT
* STEPS TO REPRODUCE 1. Open Inspector to Console 2. js> $0 => CRASH Appears to be JSC only.
Attachments
[PATCH] Proposed Fix
(3.15 KB, patch)
2012-03-13 23:48 PDT
,
Joseph Pecoraro
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Joseph Pecoraro
Comment 1
2012-03-13 23:48:35 PDT
Created
attachment 131794
[details]
[PATCH] Proposed Fix Another approach would be to implement and use ScriptValue::undefined instead of ScriptValue() from InjectedScriptHost. I'll try to get a patch of that up as well.
Joseph Pecoraro
Comment 2
2012-03-13 23:56:23 PDT
Looks like JSC would probably need a ScriptState / ExecState for ScriptValue::undefined() to work, so I'm going to avoid that approach.
WebKit Review Bot
Comment 3
2012-03-14 14:57:01 PDT
Comment on
attachment 131794
[details]
[PATCH] Proposed Fix Clearing flags on attachment: 131794 Committed
r110760
: <
http://trac.webkit.org/changeset/110760
>
WebKit Review Bot
Comment 4
2012-03-14 14:57:06 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug