[JSC] Web Inspector: CRASH running $0, $1, etc before they are set https://bugs.webkit.org/show_bug.cgi?id=81082

Source/WebCore:

Don't return an invalid JSValue. Check if the ScriptValue
has no value and return undefined in that case.

Patch by Joseph Pecoraro <pecoraro@apple.com> on 2012-03-14
Reviewed by Pavel Feldman.

Updated test: inspector/console/command-line-api.html

* bindings/js/JSInjectedScriptHostCustom.cpp:
(WebCore::JSInjectedScriptHost::inspectedObject):

LayoutTests:

Test for an undefined inspectedObject.

Patch by Joseph Pecoraro <pecoraro@apple.com> on 2012-03-14
Reviewed by Pavel Feldman.

* inspector/console/command-line-api-expected.txt:
* inspector/console/command-line-api.html:

Canonical link: https://commits.webkit.org/98325@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@110760 268f45cc-cd09-0410-ab3c-d52691b4dbfc